# HERoEHS-DIANA-Motion

diana_kinematics_dynamics/: CMakeLists.txt  package.xml
diana_manager/: CMakeLists.txt  package.xml
diana_online_walking_module/: CMakeLists.txt  package.xml
diana_online_walking_module/src/: diana_online_walking.cpp
