<?xml version="1.0"?>
<package>
  <name>diana_online_walking_module</name>
  <version>0.0.0</version>
  <description>The diana_online_walking_module package</description>
  <maintainer email="jaysong@todo.todo">jaysong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>heroehs_math</build_depend>
  <build_depend>heroehs_pd_balance_controller</build_depend>
  <build_depend>diana_online_walking_module_msgs</build_depend>
  <build_depend>diana_kinematics_dynamics</build_depend>
  <build_depend>heroehs_online_walking_pattern_generator</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>heroehs_math</run_depend>
  <run_depend>heroehs_pd_balance_controller</run_depend>
  <run_depend>diana_online_walking_module_msgs</run_depend>
  <run_depend>diana_kinematics_dynamics</run_depend>
  <run_depend>heroehs_online_walking_pattern_generator</run_depend>
</package>
